--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -299,8 +299,8 @@
 	left: 0;
 	top: 0;
 
-	width: 230px;
-	height: 230px;
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 	border-radius: 10px;
 	opacity: 0;
@@ -552,6 +552,24 @@
 		width: 90%;
 		margin: 5px 0;
 		padding: 5px;
+	}
+
+	.main-content > .content section .section-content {
+		max-height: 60vh;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	.main-content > .content section .img-preview {
+		display: none;
+	}
+
+	.main-content > .content .song-list {
+		width: 100%;
+		margin-top: 10px;
+		padding: 0;
 	}
 }
 
