--- a/src/css/playlist-sidebar.css
+++ b/src/css/playlist-sidebar.css
@@ -1,16 +1,15 @@
 .playlist-sidebar {
 	background-color: var(--bg-lv7);
 
-	position: fixed;
+	position: absolute;
 	top: 0;
 	right: 0;
 
-	width: 280px;
-	height: calc(100% - 90px);
-
+	width: 0;
+	height: 100%;
 	transition: all 0.5s ease;
 }
 
-.playlist-sidebar.hide {
-	width: 0;
+.playlist-sidebar.active {
+	width: 280px;
 }
