--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -94,9 +94,7 @@
 	height: 0;
 	padding: 0;
 	margin-left: 10px;
-
 	z-index: 10;
-
 	transition: all 0.5s ease;
 }
 .main-content .search-bar.active .suggest-list {
@@ -119,7 +117,6 @@
 	justify-content: flex-start;
 
 	position: relative;
-
 	border-radius: 4px;
 	padding: 8px 10px;
 
@@ -396,6 +393,7 @@
 	margin-top: 15px;
 }
 
+/* Playlist Section */
 #playlist .new-playlist {
 	background: linear-gradient(33deg, #5a1eae -7%, #ce267a 117%);
 	border-radius: 8px;
@@ -417,6 +415,7 @@
 	cursor: pointer;
 	width: 50px;
 	height: 50px;
+	transition: all 0.5s ease;
 }
 #playlist .new-playlist .create-btn::after,
 #playlist .new-playlist .create-btn::before {
@@ -434,12 +433,32 @@
 	bottom: 2px;
 }
 
+#playlist .new-playlist .create-btn:hover {
+	transform: rotateZ(-90deg);
+}
+#playlist .new-playlist:hover {
+	animation: pock 0.7s ease-in-out;
+}
+
+@keyframes pock {
+	0% {
+		transform: scale(0.9);
+	}
+	50% {
+		transform: scale(1.1);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+
 #playlist .new-playlist .title {
 	text-align: center;
 	padding: 10px;
 	font-size: 1.2rem;
 }
 
+#artist .swiper-container,
 #playlist .swiper-container {
 	overflow: hidden;
 	position: relative;
@@ -450,13 +469,26 @@
 	align-items: center;
 	justify-content: center;
 }
-
+#artist .swiper-wrapper,
 #playlist .swiper-wrapper {
 	position: absolute;
-	inset: 0 0 0 0;
+	inset: 0;
 	z-index: 0;
 	width: 100%;
 	height: 230px;
+}
+#playlist .swiper-container .swiper-pagination .swiper-pagination-bullet {
+	background-color: #6f7073;
+	margin: 0 5px;
+	border-radius: 5px;
+	transition: all 0.4s ease;
+}
+#playlist
+	.swiper-container
+	.swiper-pagination
+	.swiper-pagination-bullet-active {
+	background: linear-gradient(140deg, #d45b7a, #fda576);
+	width: 16px;
 }
 
 #playlist .swiper-slide {
@@ -474,26 +506,13 @@
 	transition: all 0.5s ease;
 }
 
-#playlist .swiper-container .swiper-pagination .swiper-pagination-bullet {
-	background-color: #6f7073;
-	margin: 0 5px;
-	border-radius: 5px;
-	transition: all 0.4s ease;
-}
-
-#playlist
-	.swiper-container
-	.swiper-pagination
-	.swiper-pagination-bullet-active {
-	background: linear-gradient(140deg, #d45b7a, #fda576);
-	width: 16px;
-}
-
 #playlist .swiper-slide .playlist-option {
-	background-size: cover;
 	border-radius: 10px;
+	margin-bottom: 10px;
 	width: 130px;
 	height: 160px;
+
+	position: relative;
 
 	display: flex;
 	align-items: center;
@@ -501,7 +520,22 @@
 }
 
 #playlist .swiper-slide .playlist-option-overlay {
+	border-radius: 10px;
+	position: absolute;
+	width: 0;
+	height: 0;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+
 	opacity: 0;
+	background-color: rgba(0, 0, 0, 0.445);
+	transition: all 0.5s ease;
+}
+
+#playlist .swiper-slide .playlist-option-overlay > i {
+	cursor: pointer;
 }
 
 #playlist .swiper-slide .playlist-option:hover {
@@ -509,7 +543,39 @@
 }
 #playlist .swiper-slide .playlist-option:hover .playlist-option-overlay {
 	opacity: 1;
-	transition: all 0.5s ease;
+	width: 100%;
+	height: 100%;
+}
+
+#playlist .swiper-slide .playlist-title,
+#playlist .swiper-slide .playlist-owner {
+	font-size: 1.1rem;
+	line-height: 1.3;
+}
+
+/* Artist Section */
+#artist .swiper-container {
+	width: 100%;
+	height: 270px;
+}
+#artist .artist-info {
+	position: relative;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	margin: 20px 40px 0 0;
+}
+#artist .artist-info .artist__bg > img {
+	position: relative;
+	display: block;
+	border-radius: 50%;
+	width: 180px;
+	height: 180px;
+	opacity: 1;
+}
+#artist .artist-info .artist__content {
+	position: relative;
 }
 
 .main-content .to-top {
