--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -156,7 +156,7 @@
 	position: relative;
 
 	width: 100%;
-	padding: 0 54px 90px;
+	padding: 0 54px 30px;
 
 	display: flex;
 	align-items: center;
@@ -556,7 +556,7 @@
 /* Artist Section */
 #artist .swiper-container {
 	width: 100%;
-	height: 270px;
+	height: 300px;
 }
 #artist .artist-info {
 	position: relative;
@@ -564,7 +564,7 @@
 	align-items: center;
 	flex-direction: column;
 	justify-content: center;
-	margin: 20px 40px 0 0;
+	margin: 40px 40px 0 0;
 }
 #artist .artist-info .artist__bg > img {
 	position: relative;
@@ -576,6 +576,22 @@
 }
 #artist .artist-info .artist__content {
 	position: relative;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+}
+#artist .artist-info .artist__name {
+	font-weight: bold;
+	font-size: 1.3rem;
+	margin: 5px 0;
+}
+#artist .artist-info .artist__status {
+	cursor: pointer;
+	margin: 5px 0;
+	padding: 5px 10px;
+	border-radius: 20px;
+	background-color: var(--bg-lv6);
 }
 
 .main-content .to-top {
@@ -701,4 +717,9 @@
 	#playlist .swiper-container {
 		width: 100%;
 	}
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+	color: var(--bg-lv1);
 }
