--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -14,11 +14,6 @@
 	width: calc(100% - 240px);
 	height: calc(100vh - 90px);
 	transition: all 0.5s ease;
-
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	justify-content: flex-start;
 }
 .main-content .top-ico {
 	padding: 0 10px;
@@ -245,6 +240,10 @@
 	margin: 0 7px;
 	padding: 5px 15px;
 	border-radius: 20px;
+	transition: all 0.35s ease;
+}
+.main-content > .personal-section .nav-links .link:hover {
+	background-color: var(--bg-lv6);
 }
 .main-content > .personal-section .nav-links .liactive {
 	background-color: var(--bg-lv5);
@@ -271,8 +270,10 @@
 
 .main-content > .personal-section section > .title {
 	flex: 1;
-	height: 30px;
 	font-size: 1.5rem;
+
+	position: relative;
+	height: 30px;
 	padding-bottom: 10px;
 
 	display: flex;
@@ -281,21 +282,79 @@
 }
 
 .main-content > .personal-section section > .title > span {
+	color: var(--bg-lv0);
 	position: relative;
-}
-.main-content > .personal-section section > .title > span::after {
-	content: '';
-	position: absolute;
-	bottom: -5px;
+	overflow: hidden;
+	cursor: pointer;
 	left: 0;
-	right: 0;
-	height: 5px;
-	transform: scaleX(0);
-	transition: all 0.5s ease;
-	background-color: var(--bg-lv2);
+	border: 0;
+	padding: 5px;
+	padding-left: 20px;
+	border-top-right-radius: 15px;
+	border-top-left-radius: 5px;
+	border-bottom-right-radius: 15px;
+	border-bottom-left-radius: 5px;
+
+	line-height: auto;
+	letter-spacing: 2px;
+	transition: all 0.3s ease-in-out;
+	transition: background 0.3s 0.2s ease-in-out;
 }
+.main-content > .personal-section section > .title > span:hover {
+	background-color: var(--bg-lv0);
+}
+
+.main-content > .personal-section section > .title > span > a {
+	color: var(--bg-lv0);
+	transition: all 0.3s ease-in-out;
+}
+.main-content > .personal-section section > .title > span > a::before {
+	content: '';
+	background-color: #f38181;
+	position: absolute;
+	left: 5px;
+	top: 0;
+	width: 3px;
+	z-index: 10;
+	height: 100%;
+	border-radius: 50px;
+	transition: all 0.3s ease-in-out;
+}
+.main-content > .personal-section section > .title > span > a::after {
+	content: '';
+	width: 15px;
+	height: 15px;
+	display: flex;
+	align-items: center;
+
+	background-color: transparent;
+	position: absolute;
+	top: calc(50% - 9px);
+	z-index: 10;
+
+	border: solid 3px #f38181;
+	border-radius: 2px;
+	border-bottom: 0;
+	border-left: 0;
+	transform: translateX(-42px) rotate(45deg);
+	transition: all 0.3s 0.1s ease-in-out;
+}
+
 .main-content > .personal-section section > .title > span:hover::after {
-	transform: scaleX(1);
+	width: 100%;
+}
+.main-content > .personal-section section > .title > span:hover > a::before {
+	left: 23px;
+	transform: rotate(90deg);
+}
+.main-content > .personal-section section > .title > span:hover > a {
+	color: var(--bg-lv8);
+	padding-left: 35px;
+	font-weight: bold;
+	z-index: 14;
+}
+.main-content > .personal-section section > .title > span:hover > a::after {
+	transform: translateX(5px) rotate(45deg);
 }
 
 .main-content > .personal-section section .title-right {
@@ -307,20 +366,21 @@
 	padding: 0 5px;
 }
 
-.main-content > .personal-section section .upload-song {
-	margin-right: 10px;
-}
 .main-content > .personal-section section .upload-song,
 .main-content > .personal-section section .play-all {
 	cursor: pointer;
 	font-size: 1rem;
 
-	padding: 5px 10px;
+	position: relative;
 	height: 30px;
+	padding: 5px 10px;
 
 	border-radius: 20px;
 	color: var(--bg-lv0);
 	background-color: var(--bg-lv6);
+}
+.main-content > .personal-section section .upload-song {
+	margin-right: 10px;
 }
 
 .main-content > .personal-section section .img-preview {
@@ -369,6 +429,8 @@
 	cursor: pointer;
 	margin-bottom: 15px;
 	border-radius: 10px;
+
+	transition: all 0.35s ease;
 
 	flex: 1;
 	display: flex;
@@ -434,6 +496,7 @@
 
 	width: 180px;
 	height: 230px;
+	margin-top: 15px;
 	margin-right: 25px;
 
 	display: flex;
@@ -496,6 +559,7 @@
 	position: relative;
 	width: calc(100% - 180px);
 	height: 230px;
+	margin-top: 15px;
 
 	display: flex;
 	align-items: center;
@@ -691,6 +755,11 @@
 .swiper-button-next,
 .swiper-button-prev {
 	color: var(--bg-lv1);
+	transition: all 0.3s ease;
+}
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+	transform: scale(1.3);
 }
 
 @media screen and (max-width: 750px) {
@@ -754,5 +823,9 @@
 
 	#playlist .swiper-container {
 		width: 100%;
+	}
+
+	.main-content > .personal-section section .title-right span {
+		display: none;
 	}
 }
