--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -662,12 +662,12 @@
 	justify-content: center;
 	margin: 40px 40px 0 0;
 }
-#artist .artist-info .artist__bg > img {
+#artist .artist-info .artist__bg > div {
+	border-radius: 50%;
 	position: relative;
 	display: block;
-	border-radius: 50%;
-	width: 180px;
 	height: 180px;
+	width: 180px;
 	opacity: 1;
 }
 #artist .artist-info .artist__content {
