--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -273,8 +273,9 @@
 	font-size: 1.5rem;
 
 	position: relative;
-	height: 30px;
 	padding-bottom: 10px;
+	margin-top: 10px;
+	height: 30px;
 
 	display: flex;
 	align-items: center;
