--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -98,7 +98,7 @@
 	--bg-lv4: #969696;
 	--bg-lv5: #787878;
 	--bg-lv6: #5a5a5a;
-	--bg-lv7: #3c3c3c;
+	--bg-lv7: #0e0c0c;
 	--bg-lv8: #1e1e1e;
 	--bg-lv9: #000000;
 	--bg-lv0-alpha: rgba(255, 255, 255, 0.7);
