--- a/src/css/category_sidebar.css
+++ b/src/css/category_sidebar.css
@@ -253,8 +253,9 @@ body > .new-pl-modal input:focus {
 		transform: scale(1);
 	}
 }
+
 .category-sidebar .new-pl-banner,
-.category-sidebar .banner-modal-ad {
+.banner-modal-ad {
 	/* background-image: linear-gradient(117deg, #5a4be7, #c86dd7 102%); */
 	background: linear-gradient(33deg, #5a1eae -7%, #ce267a 117%);
 
@@ -268,18 +269,41 @@ body > .new-pl-modal input:focus {
 	line-height: 1.5;
 }
 .category-sidebar .new-pl-link,
-.category-sidebar .banner-modal-ad-link {
+.banner-modal-ad-link {
 	background-color: #ffdb00;
 	border-color: #ffdb00;
 	border-radius: 15px;
 	color: black;
 
-	position: relative;
 	display: block;
+	overflow: hidden;
+	position: relative;
+	padding: 6px 35px;
 	font-weight: 600;
 	font-size: 12px;
-	padding: 6px 35px;
 	margin-top: 7px;
+	transition: all 0.7s ease;
+}
+.category-sidebar .banner-modal-ad-link {
+	color: rgb(189, 80, 29);
+}
+.banner-modal-ad-link::before {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+
+	width: 100%;
+	height: 100px;
+	background-color: rgba(255, 255, 255, 0.6);
+	transform: skewY(45deg) translateY(210px);
+	transition: all 0.7s ease;
+}
+.banner-modal-ad-link:hover {
+	transform: translateY(3px);
+}
+.banner-modal-ad-link:hover::before {
+	transform: skewY(45deg) translateY(-220px);
 }
 
 .category-sidebar .library-list {
@@ -315,19 +339,10 @@ body > .new-pl-modal input:focus {
 }
 
 @media screen and (max-width: 1024px) {
-	.category-sidebar .item span {
-		display: none;
-	}
-
+	.banner-modal-ad-link,
+	.category-sidebar .item span,
+	.category-sidebar .title .app-name,
 	.category-sidebar .banner-modal-ad,
-	.category-sidebar .banner-modal-ad-link {
-		display: none;
-	}
-
-	.category-sidebar .title .app-name {
-		display: none;
-	}
-
 	.category-sidebar .create-new-playlist span {
 		display: none;
 	}
@@ -354,3 +369,49 @@ body > .new-pl-modal input:focus {
 		display: none;
 	}
 }
+
+/* .link {
+	position: fixed;
+	left: 45%;
+	top: 25%;
+
+	width: 50px;
+	height: 50px;
+	margin-bottom: 12px;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	color: #fff;
+	border-radius: 5px;
+	border: 1px solid rgba(255, 255, 255, 0.2);
+	border-right: 1px solid rgba(0, 0, 0, 0.1);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 22px 70px 4px;
+
+	transition: all 0.8s ease;
+	text-decoration: none;
+	overflow: hidden;
+}
+.link:hover {
+	transform: translateX(-15px);
+	background-color: rgba(69, 122, 191, 1);
+	box-shadow: rgba(69, 122, 191, 1) 0 5px 38px,
+		rgba(69, 122, 191, 1) 0 0px 28px;
+}
+.link::before {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+
+	width: 100%;
+	height: 50px;
+	background-color: rgba(255, 255, 255, 0.4);
+	transform: skewY(45deg) translateY(150px);
+	transition: all 0.7s;
+}
+.link:hover::before {
+	transform: skewY(45deg) translateY(-150px);
+} */
